made private contact get api call
